spacing issues

--- a/About Page/about.css
+++ b/About Page/about.css
@@ -66,7 +66,9 @@ p {
 
     p{
         font-size: 20px;
-        margin-bottom: 80px;
+        margin-bottom: 20px;
+        width: 300px;
+        padding:20px
     }
 
     a{
@@ -74,10 +76,8 @@ p {
     }
 
     main {
-        /* justify-content: center;
-        align-items: center; */
         text-align: center;
         margin-right: 10%;
-        margin-left: 20%;
+        margin-left: 15%;
     }
 }
